# scylla

./: .gitignore  Cargo.toml  LICENSE  Makefile  magic_test  magic_test.c  run_movegen_tests  run_tests  scylla  scylla.c
cli/: Cargo.toml
cli/src/: scylla.rs
engine/board/: Cargo.toml
engine/board/src/: board.rs  fen.rs  lib.rs  zobrist.rs
engine/eval/: Cargo.toml
engine/eval/src/: lib.rs  pst.rs
engine/movegen/: Cargo.toml
engine/movegen/src/: bishops.rs  constants.rs  generator.rs  king.rs  knights.rs  lib.rs  magics.rs  masks.rs  moves.rs  notation.rs  pawn.rs  queen.rs  rooks.rs  sliders.rs
engine/perft/: Cargo.toml
engine/perft/src/: lib.rs
engine/search/: Cargo.toml
engine/search/src/: lib.rs
engine/time/: Cargo.toml
engine/tt/: Cargo.toml
engine/tt/src/: lib.rs
engine/types/: Cargo.toml
engine/types/src/: bitboard.rs  color.rs  lib.rs  mov.rs  piece.rs  square.rs
engine/uci/: Cargo.toml
engine/uci/src/: interface.rs  lib.rs
src/: bitboard.c  bitboard.h  board.c  board.h  datagen.c  datagen.h  defs.h  evaluate.c  evaluate.h  move.c  move.h  movegen.c  movegen.h  nn_encode.c  nn_encode.h  perft.c  perft.h  search.c  search.h
tests/: bitboard_test.c  movegen_test.c  perft_test.c
